src/objects/Visit_Report__c.object
<CustomObject>
    <description>This object holds the Visit Reports which will be attached to Accounts and can be linked to Opportunities &amp; Attendees</description>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Lookup Relationship with Account Plan</description>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Visit Reports</relationshipLabel>
        <relationshipName>Visit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Accounts</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Visit Reports</relationshipLabel>
        <relationshipName>Visit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Status__c</fullName>
        <formula>TEXT(Account_Plan__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Plan Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Business_Plan_Status__c</fullName>
        <formula>IF ( (TEXT(Joint_Business_Plan__r.Status__c) == &apos;Closed&apos; || TEXT(Joint_Business_Plan__r.Status__c) == &apos;Obsolete&apos;), &apos;Closed&apos;, TEXT(Joint_Business_Plan__r.Status__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Partner Business Plan Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Qualification_Status__c</fullName>
        <formula>IF (OR( ISPICKVAL( Channel_Pre_Qualification__r.Status__c , &apos;Obsolete&apos;), ISPICKVAL(Channel_Pre_Qualification__r.Status__c, &apos;Declined&apos;), 
ISPICKVAL(Channel_Pre_Qualification__r.Status__c, &apos;Completed&apos;) ), &apos;Closed&apos;, TEXT(Channel_Pre_Qualification__r.Status__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Qualification Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Business_Review_Status__c</fullName>
        <formula>IF (OR(ISPICKVAL( Channel_Review__r.Status__c , &apos;Obsolete&apos;), 
ISPICKVAL( Channel_Review__r.Status__c , &apos;Completed&apos;)), &apos;Closed&apos;, TEXT(Channel_Review__r.Status__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Business Review Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agenda__c</fullName>
        <label>Agenda</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R4</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Visit Reports</relationshipLabel>
        <relationshipName>Visit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Pre_Qualification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Partner Pre-Qualification</label>
        <referenceTo>Channel_Qualifications__c</referenceTo>
        <relationshipLabel>Visit Reports</relationshipLabel>
        <relationshipName>Visit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Partner Business Review</label>
        <referenceTo>Channel_Business_Review__c</referenceTo>
        <relationshipLabel>Visit Reports</relationshipLabel>
        <relationshipName>Visit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confidential__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The information on this Visit Report should not be shared externally</inlineHelpText>
        <label>Confidential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Visit__c</fullName>
        <label>Date of Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_User_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End User Project</label>
        <referenceTo>End_User_Project__c</referenceTo>
        <relationshipLabel>Visit Reports</relationshipLabel>
        <relationshipName>Visit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Comment__c</fullName>
        <inlineHelpText>This field is for internal comments only and should not be shared externally</inlineHelpText>
        <label>Internal Comment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Joint_Business_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Partner Business Plan</label>
        <referenceTo>Joint_Business_Plan__c</referenceTo>
        <relationshipLabel>Visit Reports</relationshipLabel>
        <relationshipName>Visit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field created as part of R5-2576 to provide users with the ability to create visit reports from leads.</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Visit Reports</relationshipLabel>
        <relationshipName>Visit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <inlineHelpText>Where did the visit take place?</inlineHelpText>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_Minutes__c</fullName>
        <label>Meeting Minutes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <infoMessage>Please select the related opportunity from the list</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Visit Reports</relationshipLabel>
        <relationshipName>Visit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <inlineHelpText>What was the reason for the visit?</inlineHelpText>
        <label>Reason</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source_System_ID__c</fullName>
        <description>Stores the ID form the source system of a record (used for data migration)</description>
        <label>Source System ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Type__c</fullName>
        <description>Picklist created as part of R5-2538 to provide users with the ability to differentiate between internal events and external events (involving client contacts) when setting up an event in SFDC.</description>
        <label>Visit Type</label>
        <picklist>
            <picklistValues>
                <fullName>Internal meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External meeting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Visit Report</label>
    <listViews>
        <fullName>AllVisitReports</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Location__c</columns>
        <columns>Confidential__c</columns>
        <columns>Date_of_Visit__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>1. All Visit Reports</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyVisitReports</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Location__c</columns>
        <columns>Confidential__c</columns>
        <columns>Date_of_Visit__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <label>2. My Visit Reports</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Visit Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visit Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ChannelPreQual_VisitReport_CloseCheck</fullName>
        <active>true</active>
        <description>R5 - If Channel Partner Pre Qualification Status is Obsolete/Declined/Completed, then the user should not edit the Visit report record</description>
        <errorConditionFormula>OR( ISPICKVAL( Channel_Pre_Qualification__r.Status__c , &apos;Obsolete&apos;), ISPICKVAL(Channel_Pre_Qualification__r.Status__c, &apos;Declined&apos;),
ISPICKVAL(Channel_Pre_Qualification__r.Status__c, &apos;Completed&apos;) )</errorConditionFormula>
        <errorMessage>You cannot save the changes - Channel Partner Pre Qualification is Closed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ChannelBusReview_ClosedCheck_VisitReport</fullName>
        <active>true</active>
        <description>R5 - If Channel Business review Status is Obsolete, then the user should not edit the visit report record</description>
        <errorConditionFormula>OR(ISPICKVAL(  Channel_Review__r.Status__c  , &apos;Obsolete&apos;), 
ISPICKVAL( Channel_Review__r.Status__c , &apos;Completed&apos;))</errorConditionFormula>
        <errorMessage>You cannot save the changes - Channel Partner Business Review is Closed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Visit_Reports_On_Inactive_Accounts</fullName>
        <active>true</active>
        <description>No Visit Reports On Inactive Accounts</description>
        <errorConditionFormula>IF( 
 AND(NOT($User.AccountMerge_Override__c), Account__r.RecordType.Name = &quot;Read Only&quot;, ISNEW()),
True, False)</errorConditionFormula>
        <errorMessage>You can not create a new Visit report on an Account that is set to Inactive!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Visit_Report_Status_Closed_Check</fullName>
        <active>true</active>
        <description>R5 - If Account Plan Status is Closed, then the user should not edit the Visit Report.</description>
        <errorConditionFormula>ISPICKVAL(Account_Plan__r.Status__c, &apos;Closed&apos;)</errorConditionFormula>
        <errorMessage>You cannot save the changes - Account Plan is Closed</errorMessage>
    </validationRules>
</CustomObject>